--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,7 +9,6 @@
     <!-- Bootsrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link href="../css/style.css" rel="stylesheet" type="text/css">
     <!--jQuery-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
@@ -175,7 +174,7 @@
                     </div>
                     <div class="modal-body">
                         <h4 class="friend-match"></h4>
-                        <img class="img-fluid" alt="profile picture">
+                        <img class="img-fluid friend-photo" src="" alt="profile picture">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
